tests/parsing/invalid/property_assigned_twice/bus.fbd
status my_status
	width = 1
	width = 2
